--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== Portfolio w/ Dropbox Integration
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Currently a backend for a Portfolio site that stores images in dropbox. Front-end still a WIP.
 
-Things you may want to cover:
+* Uses Imagemagik, paperclip, and paperclip-dropbox!
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
